# SuzyHelpdesk

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
configs/: config.yml
src/: agent.py  inference.py  main.py  preprocess_docs.py  retriever.py  routers.py
src/utils/: logging.py  prompts.py  states.py
